Fixed logo clipping in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,11 +203,10 @@ a, a:hover, a:focus, a:visited {
 	font-size: 16px;
 	font-weight: 400;
 	margin-top: 2px;
-	margin-bottom: 4px;
 }
 
 .job .job-logo {
-	margin-right: 10px;
+	margin-left: 10px;
 	height: 30px;
 }
 
